--- a/configs/MVA/ggH/quick_checks/BDT_input_plotter.ipynb
+++ b/configs/MVA/ggH/quick_checks/BDT_input_plotter.ipynb
@@ -68,6 +68,8 @@
     "    return events[ggH_filter]\n",
     "\n",
     "def getDeltaPhi(phi1,phi2):\n",
+    "    phi1 = ak.ones_like(phi1, dtype=\"double\")*phi1\n",
+    "    phi2 = ak.ones_like(phi2, dtype=\"double\")*phi2\n",
     "    dphi = abs(np.mod(phi1 - phi2 + np.pi, 2 * np.pi) - np.pi)\n",
     "    return dphi\n",
     "\n",
@@ -162,37 +164,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "151.74763464927673\n"
+      "370.8627498149872\n"
      ]
     }
    ],
    "source": [
     "start_time = time.time()\n",
     "cols_of_interest = [\n",
-    "    'dimuon_rapidity',\n",
-    "    'dimuon_cos_theta_cs',\n",
-    "    'dimuon_phi_cs',\n",
-    "    'dimuon_pt',\n",
+    "    # 'dimuon_rapidity',\n",
+    "    # 'dimuon_cos_theta_cs',\n",
+    "    # 'dimuon_phi_cs',\n",
+    "    # 'dimuon_pt',\n",
     "    'jet1_eta',\n",
     "    'jet1_pt',\n",
     "    'jet2_pt',\n",
-    "    'jet2_eta', # for test purpose\n",
+    "    # 'jet2_eta', # for test purpose\n",
     "    'jj_dEta',\n",
     "    'jj_dPhi',\n",
     "    'jj_dPhiV2',\n",
     "    'jj_mass',\n",
-    "    'mmj1_dEta',\n",
-    "    'mmj1_dPhi',\n",
-    "    'mmj_min_dEta',\n",
-    "    'mmj_min_dPhi',\n",
-    "    'mmj_min_dEtaV2',\n",
-    "    'mmj_min_dPhiV2',\n",
-    "    'mu1_eta',\n",
-    "    'mu1_pt_over_mass',\n",
-    "    'mu2_eta',\n",
-    "    'mu2_pt_over_mass',\n",
-    "    'zeppenfeld',\n",
-    "    'njets',\n",
+    "    # 'mmj1_dEta',\n",
+    "    # 'mmj1_dPhi',\n",
+    "    # 'mmj_min_dEta',\n",
+    "    # 'mmj_min_dPhi',\n",
+    "    # 'mmj_min_dEtaV2',\n",
+    "    # 'mmj_min_dPhiV2',\n",
+    "    # 'mu1_eta',\n",
+    "    # 'mu1_pt_over_mass',\n",
+    "    # 'mu2_eta',\n",
+    "    # 'mu2_pt_over_mass',\n",
+    "    # 'zeppenfeld',\n",
+    "    # 'njets',\n",
     "    # \"jj_dRapidity\", # for test purpose\n",
     "    # 'mmj1_dRapidity', # for test purpose\n",
     "    # 'mmj2_dRapidity', # for test purpose\n",
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "6aef3c9f-d2f2-4a80-b2ab-b27a9bd642ac",
    "metadata": {
     "scrolled": true
@@ -279,14 +281,14 @@
     "#     \"dimuon_rapidity\" : [-2.5,2.5, nbins], \n",
     "#     \"dimuon_eta\" : [-8,8, nbins],\n",
     "# }\n",
-    "with open(\"./plot_settings.json\", \"r\") as file:\n",
+    "with open(\"./plot_settings_gghCat_BDT_input.json\", \"r\") as file:\n",
     "    bin_map = json.load(file)\n",
     "# bin_map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "fa3ae764-41bf-4936-8cca-5ff778ddd9eb",
    "metadata": {
     "scrolled": true
@@ -297,13 +299,13 @@
      "output_type": "stream",
      "text": [
       "getHist weight sum: 881.5309439082096\n",
-      "getHist value sum: -971341.2022340298\n",
+      "getHist value sum: -971341.2513500757\n",
       "getHist weight: [0.000379, 0.000224, 0.000261, 0.000312, ..., 2.23e-05, 2.45e-05, 3.51e-05]\n",
       "getHist value: [-1, -1, -1, -1, -1, -1, -1, -1, ..., -1, 2.95, -1, -1, 0.453, -1, -1, 0.521]\n",
       "getHist hist b4 normalization: [2.52, 2.54, 2.68, 2.65, 2.78, 2.8, ..., 3.19, 3.17, 3.3, 3.34, 3.51, 3.54]\n",
       "np.sum(hist): 1.0\n",
       "getHist weight sum: 1737178.0372940407\n",
-      "getHist value sum: -20602466.336598516\n",
+      "getHist value sum: -20602466.672882587\n",
       "getHist weight: [0.0293, 0.0325, 0.0273, 0.0258, -0.0255, ..., 0.0103, 0.0119, 0.0113, 0.0143]\n",
       "getHist value: [-1, -1, -1, -1, -1, -1, -1, -1, -1, ..., 2.33, -1, -1, -1, 1.49, 1.8, -1, 2.28]\n",
       "getHist hist b4 normalization: [2.52e+03, 2.6e+03, 2.57e+03, 2.66e+03, ..., 7.31e+03, 7.59e+03, 7.93e+03]\n",
@@ -364,409 +366,35 @@
     "    # lumi = 59.97 # 2018 lumi value\n",
     "    lumi = 137.9 # Run2 value\n",
     "    hep.cms.label(data=True, loc=0, label=\"Private Work\", com=CenterOfMass, ax=ax_main, lumi=lumi)\n",
-    "    plt.savefig(f\"quick_plots/BDT_input{year}_{field}\")\n",
+    "    plt.savefig(f\"plots/BDT_input{year}_{field}\")\n",
     "    plt.clf()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "58dcdad5-391a-4147-9827-1b876ea26b85",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ak.sum(ak.is_none(events_bkg.jj_dPhiV2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "fde028c3-9f6b-4e3c-a88d-16f9c4342cc4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-5. , -4.8, -4.6, -4.4, -4.2, -4. , -3.8, -3.6, -3.4, -3.2, -3. ,\n",
-       "       -2.8, -2.6, -2.4, -2.2, -2. , -1.8, -1.6, -1.4, -1.2, -1. , -0.8,\n",
-       "       -0.6, -0.4, -0.2,  0. ,  0.2,  0.4,  0.6,  0.8,  1. ,  1.2,  1.4,\n",
-       "        1.6,  1.8,  2. ,  2.2,  2.4,  2.6,  2.8,  3. ,  3.2,  3.4,  3.6,\n",
-       "        3.8,  4. ,  4.2,  4.4,  4.6,  4.8,  5. ])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# np.linspace(*[-0.0001, 7.9999, 9])\n",
-    "np.linspace(*[-5, 5, 51])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d5d8f7d9-d7d2-4427-820f-18d89f2aeac0",
+   "execution_count": null,
+   "id": "47b5b45a-5787-4522-8d64-52632ec8999b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# events_sig = dak.from_parquet(sig_l)\n",
-    "# # events_sig.fields\n",
-    "# ak.all(events_sig.wgt_nominal_qgl.compute() ==1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "d3762e25-2c72-4e48-8dfd-719c0fbd0513",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# total_wo_qgl = ak.sum(events_sig.wgt_nominal_total/events_sig.wgt_nominal_btag_wgt).compute()\n",
-    "# total = ak.sum(events_sig.wgt_nominal_total.compute() )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "6c98e3fd-dca1-4e49-a6cb-5737e42ecb91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# total_wo_qgl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "2ff61242-e60a-4ac0-b6ed-7a503befb4c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "data = {\n",
-    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],\n",
-    "    'Age': [np.nan, np.nan, np.nan, np.nan, np.nan],\n",
-    "    'City': ['New York', 'Los Angeles', 'Chicago', 'Houston', 'Phoenix'],\n",
-    "    'Score': [np.nan, np.nan, np.nan, np.nan, np.nan]\n",
-    "}\n",
-    "\n",
-    "# Create a DataFrame from the dictionary\n",
-    "df = pd.DataFrame(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "5a9e040d-3eb8-4b59-aec1-4d8d60b28bfa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>David</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Eve</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Phoenix</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name  Age         City  Score\n",
-       "0    Alice  NaN     New York    NaN\n",
-       "1      Bob  NaN  Los Angeles    NaN\n",
-       "2  Charlie  NaN      Chicago    NaN\n",
-       "3    David  NaN      Houston    NaN\n",
-       "4      Eve  NaN      Phoenix    NaN"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "6f167994-cc03-4409-9b17-99e04606ee31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.fillna({\"Score\":-1},inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "9f4c168e-a472-4764-91c8-bd5a4667d4e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>David</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Eve</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Phoenix</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name  Age         City  Score\n",
-       "0    Alice  NaN     New York   -1.0\n",
-       "1      Bob  NaN  Los Angeles   -1.0\n",
-       "2  Charlie  NaN      Chicago   -1.0\n",
-       "3    David  NaN      Houston   -1.0\n",
-       "4      Eve  NaN      Phoenix   -1.0"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "40b26c1e-aef3-4614-bbd1-38c32ebb521e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.fillna(0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "6e7ed781-c229-402f-bd1a-53fe7fdb76de",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>David</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Eve</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Phoenix</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name  Age         City  Score\n",
-       "0    Alice  0.0     New York   -1.0\n",
-       "1      Bob  0.0  Los Angeles   -1.0\n",
-       "2  Charlie  0.0      Chicago   -1.0\n",
-       "3    David  0.0      Houston   -1.0\n",
-       "4      Eve  0.0      Phoenix   -1.0"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
+    "A = ak.Array([2.0], dtype=\"double\")\n",
+    "ak.types.NumpyType.copy(A)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "951470c9-52c3-4d06-9db5-b6978c8cde2e",
+   "id": "51b3e350-62e6-475d-82c2-2f9772cd12ba",
    "metadata": {},
    "outputs": [],
    "source": []
